@@ -86,7 +86,7 @@ import org.jboss.seam.log.Log;
 		if(this.flagAction==0){
 			if (rowCount==null) {
 				if(auditListCount!=null){
-				   rowCount = new Integer(auditListCount);
+				   rowCount = Integer.valueOf(auditListCount);
 				 }else{
 				   rowCount = 0;
 				 }
@@ -107,7 +107,7 @@ import org.jboss.seam.log.Log;
 					"clRecAllFact".equals(remoteAudit)||
 					"clSelOneFact".equals(remoteAudit)*/)&&
 					auditListCount!=null){
-					rowCount = new Integer(auditListCount);
+					rowCount = Integer.valueOf(auditListCount);
 				}else{
 					rowCount = new Integer(
 							getDataProvider().getRowCount());
